--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <strong>원달러시티</strong>입니다 🌍
   </p>
   <div class="footer">
-    &copy; 2025 1dollar.city — Created by Hidi 🧡
+    &copy; 2025 1dollar.city | Powered by Hidi.Works....love you 🧡
   </div>
 </body>
 </html>
