--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
   </style>
 </head>
 <body>
-  <h1>버리기 전에 원달러시티~!!</h1>
+  <h1>버리기 전에 원달러시리~!!</h1>
   <h2>쓸만한 물건을 콜라 한 잔 값에!</h2>
   <p>
-    더 이상 필요 없지만 누군가에겐 꼭 필요한 물건이 있나요?<br />
+    당신에겐 더 이상 필요 없지만 누군가에겐 꼭 필요한 물건이 있나요?<br />
     <strong>1dollar.city</strong>에 올려보세요.<br />
     전 세계 어디서든 필요한 사람에게 기회가 될 수 있어요.
   </p>
   <p>
-    공짜로 버리기 전에<br />
+    돈내고 버리기 전에<br />
     단돈 1달러로 나눔하는 따뜻한 도시,<br />
-    <strong>원달러시티</strong>입니다 🌍
+    <strong>원달러시리</strong>입니다 🌍
   </p>
   <div class="footer">
     &copy; 2025 1dollar.city | Powered by Hidi.Works....love you 🧡
