--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     전 세계 어디서든 필요한 사람에게 기회가 될 수 있어요.
   </p>
   <p>
-    돈내고 버리기 전에<br />
+    돈내고 버리지 말고<br />
     단돈 1달러로 나눔하는 따뜻한 도시,<br />
     <strong>원달러시리</strong>입니다 🌍
   </p>
