--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 <body>
-  <h1>버리기 전에 원달러시리~!!</h1>
+  <h1>버리기 전에 원달러.시리~!!</h1>
   <h2>쓸만한 물건을 콜라 한 잔 값에!</h2>
   <p>
     당신에겐 더 이상 필요 없지만 누군가에겐 꼭 필요한 물건이 있나요?<br />
@@ -43,8 +43,8 @@
   </p>
   <p>
     돈내고 버리지 말고<br />
-    단돈 1달러로 나눔하는 따뜻한 도시,<br />
-    <strong>원달러시리</strong>입니다 🌍
+    1,000원만 받고 나눔하는 따뜻한 도시,<br />
+    <strong>원달러.시리</strong>입니다 🌍
   </p>
   <div class="footer">
     &copy; 2025 1dollar.city | Powered by Hidi.Works....love you 🧡
