--- a/ani-test.html
+++ b/ani-test.html
@@ -6,7 +6,7 @@
     <title>1dollar Animation Test</title>
     <style>
         body {
-            background-color: #fff;
+            background-color: #000;
             display: flex;
             align-items: center;
             justify-content: center;
